add initial function in js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
- 
+  <input id="distance" type="text" placeholder="type the distance in km" >
+  <input id="age" type="text" placeholder="type your age">
+  <button>Invia</button>
 
 
   <script src="main.js"></script>
