--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Biglietto del Treno | Js</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- style.css -->
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
 
-  <input id="distance" type="text" placeholder="type the distance in km" >
-  <input id="age" type="text" placeholder="type your age">
-  <button>Invia</button>
+<body>
+  <div class="container-xl mt-3">
+    <form action="#" id="ticket-form">
+      <input id="distance" type="text" placeholder="type the distance in km">
+      <input id="age" type="text" placeholder="type your age">
+      <button class="btn btn-primary"  type="submit">Invia</button>
+    </form>
+
+    <div class="target">
+      <div class="distance"></div>
+      <div class="age"></div>
+      <div class="price"></div>
+    </div>
+  </div>
+
+
 
 
   <script src="main.js"></script>
 </body>
+
 </html>
