add initial style to ticket details

--- a/index.html
+++ b/index.html
@@ -48,25 +48,36 @@
             placeholder="type your age" />
 
         </div>
-
-
-        <button class="btn btn-danger mt-3 " type="submit">Invia</button>
+        <!-- button -->
+        <div class="d-flex justify-content-center">
+          <button class="btn btn-danger mt-3 fw-bold" type="submit">Invia</button>
+        </div>
       </div>
-
     </form>
-
-
   </div>
-
 
 
   <!-- ticket -->
-  <div class="target">
-    <div class="distance"></div>
-    <div class="age"></div>
-    <div class="price"></div>
+
+  <div class="ticket-info mt-4">
+
+    <h2 class="fw-semibold text-light ">IL TUO BIGLIETTO</h2>
+
+    <div class="container-md my-4">
+
+
+
+
+      <div class="target">
+        <div class="distance"></div>
+        <div class="age"></div>
+        <div class="price"></div>
+      </div>
+
+    </div>
   </div>
-  </div>
+
+
 
 
 
