edit style of ticket details

--- a/index.html
+++ b/index.html
@@ -64,15 +64,19 @@
     <h2 class="fw-semibold text-light ">IL TUO BIGLIETTO</h2>
 
     <div class="container-md my-4">
-
-
-
-
-      <div class="target">
-        <div class="distance"></div>
-        <div class="age"></div>
-        <div class="price"></div>
+      <div class="row">
+        <div class="col">
+          <h4>Passenger</h4>
+          <div class="name-passenger"></div>
+          <h4>Distance</h4>
+          <div class="distance"></div>
+          <h4>Age</h4>
+          <div class="age"></div>
+          <h4>Final price</h4>
+          <div class="price"></div>
+        </div>
       </div>
+
 
     </div>
   </div>
