--- a/index.html
+++ b/index.html
@@ -14,72 +14,91 @@
 
 <body>
 
-  <header>
-    <h2>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
-  </header>
+  <section class="form-section">
 
-  <div class="container-md mt-3">
+    <header>
+      <h2 class="fw-semibold">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
+    </header>
 
-    <!-- Form -->
-    <form action="#" id="ticket-form">
-      <div class="row">
-        <!-- Name -->
-        <div class="col">
-          <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" name="name" id="name" aria-describedby="NameHelpId"
-              placeholder="type your name" />
+    <div class="container-md mt-3">
+
+      <!-- Form -->
+      <form action="#" id="ticket-form">
+        <div class="row">
+          <!-- Name -->
+          <div class="col">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" name="name" id="name" aria-describedby="NameHelpId"
+                placeholder="type your name" />
+
+            </div>
+          </div>
+
+          <!-- distance -->
+          <div class="col">
+            <label for="distance" class="form-label">Km </label>
+            <input type="number" class="form-control" name="distance" id="distance" aria-describedby="distanceHelpId"
+              placeholder="type distance in km" />
 
           </div>
-        </div>
 
-        <!-- distance -->
-        <div class="col">
-          <label for="distance" class="form-label">Km </label>
-          <input type="number" class="form-control" name="distance" id="distance" aria-describedby="distanceHelpId"
-            placeholder="type distance in km" />
+          <!-- age -->
+          <div class="col">
+            <label for="age" class="form-label">Age</label>
+            <input type="text" class="form-control" name="age" id="age" aria-describedby="ageHelpId"
+              placeholder="type your age" />
 
+          </div>
+          <!-- button -->
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-danger mt-3 fw-bold" type="submit">Invia</button>
+          </div>
         </div>
+      </form>
+    </div>
+  </section>
 
-        <!-- age -->
-        <div class="col">
-          <label for="age" class="form-label">Age</label>
-          <input type="text" class="form-control" name="age" id="age" aria-describedby="ageHelpId"
-            placeholder="type your age" />
-
-        </div>
-        <!-- button -->
-        <div class="d-flex justify-content-center">
-          <button class="btn btn-danger mt-3 fw-bold" type="submit">Invia</button>
-        </div>
-      </div>
-    </form>
-  </div>
 
 
   <!-- ticket -->
 
-  <div class="ticket-info mt-4">
+  <section class="ticket-section">
+    <div class="ticket-info mt-4">
 
-    <h2 class="fw-semibold text-light ">IL TUO BIGLIETTO</h2>
+      <h2 class="fw-semibold text-light ">IL TUO BIGLIETTO</h2>
 
-    <div class="container-md my-4">
-      <div class="row">
-        <div class="col">
-          <h4>Passenger</h4>
-          <div class="name-passenger"></div>
-          <h4>Distance</h4>
-          <div class="distance"></div>
-          <h4>Age</h4>
-          <div class="age"></div>
-          <h4>Final price</h4>
-          <div class="price"></div>
+      <div class="container-md my-4">
+        <div class="row">
+          <div class="col">
+            <h4>Passenger</h4>
+            <div class="name-passenger"></div>
+          </div>
+          <div class="col">
+            <h4>Distance</h4>
+            <div class="distance text-dark"></div>
+          </div>
+
+          <div class="col">
+            <h4>Age</h4>
+            <div class="age text-dark"></div>
+          </div>
+
+          <div class="col">
+            <h4>Final price</h4>
+            <div class="price text-dark"></div>
+          </div>
+
+
+
         </div>
+
+
       </div>
-
-
     </div>
-  </div>
+  </section>
+
+
 
 
 
