add required attribute to input element

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
               <input type="text" class="form-control" name="name" id="name" aria-describedby="NameHelpId"
-                placeholder="type your name" />
+                placeholder="type your name" required />
 
             </div>
           </div>
@@ -39,7 +39,7 @@
           <div class="col">
             <label for="distance" class="form-label">Km </label>
             <input type="number" class="form-control" name="distance" id="distance" aria-describedby="distanceHelpId"
-              placeholder="type distance in km" />
+              placeholder="type distance in km" required />
 
           </div>
 
@@ -47,7 +47,7 @@
           <div class="col">
             <label for="age" class="form-label">Age</label>
             <input type="text" class="form-control" name="age" id="age" aria-describedby="ageHelpId"
-              placeholder="type your age" />
+              placeholder="type your age" required />
 
           </div>
           <!-- button -->
