add border box to container and style to ticket details text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <form action="#" id="ticket-form">
         <div class="row">
           <!-- Name -->
-          <div class="col">
+          <div class="col text-center">
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
               <input type="text" class="form-control" name="name" id="name" aria-describedby="NameHelpId"
@@ -36,7 +36,7 @@
           </div>
 
           <!-- distance -->
-          <div class="col">
+          <div class="col text-center">
             <label for="distance" class="form-label">Km </label>
             <input type="number" class="form-control" name="distance" id="distance" aria-describedby="distanceHelpId"
               placeholder="type distance in km" required />
@@ -44,7 +44,7 @@
           </div>
 
           <!-- age -->
-          <div class="col">
+          <div class="col text-center">
             <label for="age" class="form-label">Age</label>
             <input type="text" class="form-control" name="age" id="age" aria-describedby="ageHelpId"
               placeholder="type your age" required />
@@ -72,21 +72,21 @@
         <div class="row">
           <div class="col">
             <h4>Passenger</h4>
-            <div class="name-passenger"></div>
+            <div class="name-passenger text-dark fs-3 "></div>
           </div>
           <div class="col">
             <h4>Distance</h4>
-            <div class="distance text-dark"></div>
+            <div class="distance text-dark fs-4"></div>
           </div>
 
           <div class="col">
             <h4>Age</h4>
-            <div class="age text-dark"></div>
+            <div class="age text-dark fs-4"></div>
           </div>
 
           <div class="col">
             <h4>Final price</h4>
-            <div class="price text-dark"></div>
+            <div class="price text-dark fs-4"></div>
           </div>
 
 
